update vendored BMUtils